# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../updateengine.gni")

group("unittest") {
  testonly = true
  deps = [
     "$updateengine_root_path/services/core/ability/utils/test/unittest:CoreAbilityUtilsTest",
    "$updateengine_root_path/test/unittest:$updateengine_unittest_name"
  ]
}

module_output_path = "updater/updateservice_test"
config("utest_config") {
  visibility = [ ":*" ]

  cflags = [
    "-fprofile-arcs",
    "-ftest-coverage",
    "-Wno-implicit-fallthrough",
    "-Wno-unused-function",
  ]
  cflags_cc = [ "-Wno-implicit-fallthrough" ]

  ldflags = [ "--coverage" ]
}

ohos_unittest("$updateengine_unittest_name") {
  testonly = true
  module_out_path = module_output_path
  sources = []

  include_dirs = []

  deps = []

  defines = [
    "UPDATER_UT",
    "UPDATER_API_TEST",
  ]

  external_deps = []

  public_configs = [ ":utest_config" ]
  install_enable = true
  part_name = "$updateengine_part_name"
}
