# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/update/updateservice/updateengine.gni")

ohos_prebuilt_etc("updater_sa.rc") {
  source = "etc/updater_sa.rc"
  relative_install_dir = "init"
  part_name = "$updateengine_part_name"
}

ohos_static_library("$updateengine_inner_library_name") {
  defines = [ "DUAL_ADAPTER" ]
  sources = [
    "$updateengine_root_path/interfaces/inner_api/engine/update_service_kits_impl.cpp",
    "$updateengine_root_path/interfaces/inner_api/engine/update_service_proxy.cpp",
    "$updateengine_root_path/services/callback/src/update_callback.cpp",
    "$updateengine_root_path/services/callback/src/update_callback_stub.cpp",
    "$updateengine_root_path/services/engine/src/update_helper.cpp",
  ]

  include_dirs = [
    #WANGQI# "//base/update/updater/services/include",
    #WANGQI# "//base/update/updater/utils/include",
    #WANGQI# "//base/update/updater/interfaces/kits/include",
    #WANGQI# "//commonlibrary/c_utils/base/include",
    #WANGQI# "//utils/system/safwk/native/include",
    "$updateengine_root_path/interfaces/inner_api/include",
    "$updateengine_root_path/services/engine/include",
    "$updateengine_root_path/services/callback/include",
    #WANGQI# "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    #WANGQI# "//foundation/distributedschedule/safwk/services/safwk/include",
    #WANGQI# "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
    #WANGQI# "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//third_party/bounds_checking_function/include", # secure method
  ]

  deps = [
    #WANGQI# "//base/update/updater/services/log:libupdaterlog",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    #WANGQI# "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    #WANGQI# "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "$updateengine_part_name"
}
