# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module_output_path = "update_service/update_service_test"

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("UpdateServiceGetUpgradePolicyFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/update/updateservice/test/fuzztest/updateservicegetupgradepolicy_fuzzer"
  include_dirs = [
    "//base/update/updater/services/include",
    "//base/update/updater/utils/include",
    "//base/update/updater/interfaces/kits/include",
    "//base/update/updateservice/test/fuzztest/common",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//base/update/updateservice/interfaces/inner_api/include",
    "//base/update/updateservice/services/engine/include",
    "//base/update/updateservice/services/callback/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/safwk/services/safwk/include",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
    "//foundation/distributedschedule/samgr/adapter/interfaces/innerkits/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//third_party/bounds_checking_function/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "//base/update/updateservice/test/fuzztest/common/fuzztest_helper.cpp",
    "//base/update/updateservice/test/fuzztest/updateservicegetupgradepolicy_fuzzer/updateservicegetupgradepolicy_fuzzer.cpp",
  ]
  deps = [
    "//base/update/updateservice/interfaces/inner_api/engine:updateservicekits",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":UpdateServiceGetUpgradePolicyFuzzTest",
  ]
}
###############################################################################
