# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("//base/update/updateservice/updateengine.gni")

module_output_path = "$updateengine_part_name/$updateengine_test_name"

##############################fuzztest##########################################
ohos_fuzztest("UpdateServiceRegisterUpdateCallbackFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "$updateengine_root_path/test/fuzztest/updateserviceregisterupdatecallback_fuzzer"
  include_dirs = [
    "//base/update/updater/services/include",
    "//base/update/updater/utils/include",
    "//base/update/updater/interfaces/kits/include",
    "$updateengine_root_path/test/fuzztest/common",
    "//commonlibrary/c_utils/base/include",
    "//utils/system/safwk/native/include",
    "$updateengine_root_path/interfaces/inner_api/include",
    "$updateengine_root_path/services/engine/include",
    "$updateengine_root_path/services/callback/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/safwk/services/safwk/include",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
    "//foundation/distributedschedule/samgr/adapter/interfaces/innerkits/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//third_party/bounds_checking_function/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "$updateengine_root_path/test/fuzztest/common/fuzztest_helper.cpp",
    "$updateengine_root_path/test/fuzztest/updateserviceregisterupdatecallback_fuzzer/updateserviceregisterupdatecallback_fuzzer.cpp",
  ]
  deps = [
    "$updateengine_root_path/interfaces/inner_api/engine:$updateengine_inner_library_name",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":UpdateServiceRegisterUpdateCallbackFuzzTest",
  ]
}
###############################################################################
