# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//base/update/updateservice/updateengine.gni")

ohos_shared_library("update") {
  sources = [
    "$updateengine_root_path/frameworks/js/napi/base/src/client_helper.cpp",
    "$updateengine_root_path/frameworks/js/napi/base/src/iupdater.cpp",
    "$updateengine_root_path/frameworks/js/napi/base/src/napi_util.cpp",
    "$updateengine_root_path/frameworks/js/napi/base/src/session_manager.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/local_updater.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/restorer.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/update_client.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/update_module.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/update_session.cpp",
  ]

  include_dirs = [
    #WANGQI# "//base/update/updater/interfaces/kits/include",
    #WANGQI# "//base/update/updater/services/include",
    #WANGQI# "//base/update/updater/utils/include",
    "//third_party/node/src", # napi
    "//foundation/arkui/napi/interfaces/kits",
    "//utils/native/base/include", # sptr
    #WANGQI# "//commonlibrary/c_utils/base/include",
    #WANGQI# "//utils/system/safwk/native/include",
    "$updateengine_root_path/interfaces/inner_api/include",
    "$updateengine_root_path/frameworks/js/napi/client",
    "$updateengine_root_path/frameworks/js/napi/base/include",
    #WANGQI# "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    #WANGQI# "//foundation/distributedschedule/safwk/services/safwk/include",
    #WANGQI# "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk",
    #WANGQI# "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
  ]

  deps = [
    #WANGQI# "//base/update/updater/interfaces/kits/misc_info:libmiscinfo",
    #WANGQI# "//base/update/updater/interfaces/kits/packages:libpackageExt",
    #WANGQI# "//base/update/updater/services/log:libupdaterlog",
    #WANGQI# "//base/update/updater/utils:libutils",
    "$updateengine_root_path/interfaces/inner_api/engine:$updateengine_inner_library_name",
    "//foundation/arkui/napi:ace_napi",
    "//utils/native/base:utils", # sptr
    #WANGQI# "//third_party/bounds_checking_function:libsec_static",
    #WANGQI# "//third_party/openssl:libcrypto_static",
    #WANGQI# "//third_party/openssl:ssl_source",
  ]

  external_deps = [
    #WANGQI# "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    #WANGQI# "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  install_enable = true
  relative_install_dir = "module"
  part_name = "$updateengine_part_name"

  cflags = [
    "-fPIC",
    "-Os",
    "-Werror",
  ]
}
