# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../updateengine.gni")

ohos_shared_library("$updateengine_client_library_name") {
  sources = [
    "$updateengine_root_path/frameworks/js/napi/base/src/client_helper.cpp",
    "$updateengine_root_path/frameworks/js/napi/base/src/iupdater.cpp",
    "$updateengine_root_path/frameworks/js/napi/base/src/napi_util.cpp",
    "$updateengine_root_path/frameworks/js/napi/base/src/session_manager.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/local_updater.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/restorer.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/update_client.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/update_module.cpp",
    "$updateengine_root_path/frameworks/js/napi/client/update_session.cpp",
  ]

  include_dirs = [
    "$updateengine_root_path/frameworks/js/napi/base/include",
    "$updateengine_root_path/frameworks/js/napi/client",
    "$updateengine_root_path/interfaces/inner_api/include",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",  # napi
  ]

  deps = [
    "$updateengine_root_path/interfaces/inner_api/engine:$updateengine_inner_library_name",
    "//foundation/arkui/napi:ace_napi",
  ]

  external_deps = [
    "c_utils:utils",  # sptr
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  install_enable = true
  relative_install_dir = "module"
  part_name = "$updateengine_part_name"

  cflags = [
    "-fPIC",
    "-Os",
    "-Werror",
  ]
}
