# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updateservice/updateengine.gni")

sqlite_root_path = "$updateengine_root_path/services/core/ability/sqlite"
sqlite_external_deps = [ "relational_store:native_rdb" ]
sqlite_include = [
  "$sqlite_root_path/core/include",
  "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/rdb/include",
]
sqlite_src = [ "$sqlite_root_path/core/src/sqlite_db.cpp" ]
