# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/updateservice/services/engine/engine_sa.gni")
import("//base/update/updateservice/updateengine.gni")
import("//build/test.gni")

module_output_path = "updateservice/core_ability"
config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = []
}

ohos_unittest("CoreAbilityUtilsTest") {
  module_out_path = module_output_path
  include_dirs = sa_include_dirs
  sources = sa_sources
  deps = sa_deps
  external_deps = sa_external_deps
  public_deps = sa_public_deps
  defines = sa_defines

  include_dirs += [
    "$updateengine_root_path/services/core/ability/log/include",
    "$updateengine_root_path/services/core/ability/utils/include",
    "$updateengine_root_path/services/service/include",
    "//third_party/glib/glib",
    "//third_party/glib",
  ]

  sources += [ "string_utils_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps += [
    "//third_party/glib:glib_packages",
    "//third_party/googletest:gtest_main",
  ]
}
